cmake_minimum_required(VERSION 3.22)
project(OOP_project)

set(CMAKE_CXX_STANDARD 14)

#add_executable(OOP_project BankingSystemVer01.cpp)
#add_executable(OOP_project BankingSystemVer02.cpp)
#add_executable(OOP_project BankingSystemVer03.cpp)
#add_executable(OOP_project BankingSystemVer04.cpp)
#add_executable(OOP_project BankingSystemVer05.cpp)
add_executable(OOP_project BankingSystemVer06.cpp)
